--- a/package.json
+++ b/package.json
@@ -16,21 +16,25 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.10",
-    "@types/node": "^20.9.4",
-    "@types/swagger-ui-express": "^4.1.6",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "eslint": "^8.54.0",
-    "prisma": "^5.6.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "tsx": "^4.4.0",
-    "typescript": "^5.3.2"
+    "@types/cors": "^2.8.17",
+    "@types/express": "4.17.21",
+    "@types/jest": "29.5.10",
+    "@types/node": "20.9.4",
+    "@types/swagger-ui-express": "4.1.6",
+    "@typescript-eslint/eslint-plugin": "6.12.0",
+    "@typescript-eslint/parser": "6.12.0",
+    "eslint": "8.54.0",
+    "prisma": "5.6.0",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
+    "tsx": "4.4.0",
+    "typescript": "5.3.2"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "swagger-ui-express": "^5.0.0"
+    "@prisma/client": "5.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "4.18.2",
+    "swagger-ui-express": "5.0.0"
   }
 }
