--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.10",
@@ -26,7 +27,7 @@
     "eslint": "8.54.0",
     "prisma": "5.6.0",
     "ts-jest": "29.1.1",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
     "tsx": "4.4.0",
     "typescript": "5.3.2"
   },
