--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
+    "@types/bcrypt": "5.0.2",
+    "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
-    "@types/jest": "^29.5.10",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jest": "29.5.10",
+    "@types/jsonwebtoken": "9.0.5",
     "@types/node": "20.9.4",
     "@types/swagger-ui-express": "4.1.6",
     "@typescript-eslint/eslint-plugin": "6.12.0",
     "@typescript-eslint/parser": "6.12.0",
     "eslint": "8.54.0",
-    "jest": "^29.7.0",
+    "jest": "29.7.0",
     "prisma": "5.6.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
     "tsx": "4.4.0",
-    "typescript": "^5.3.2"
+    "typescript": "5.3.2"
   },
   "dependencies": {
     "@prisma/client": "5.6.0",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
     "express": "4.18.2",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "9.0.2",
     "swagger-ui-express": "5.0.0"
   }
 }
