feat: create a unit tests

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://alexiakattah:root@localhost:5432/khipo?schema=public"
+TOKEN_SECRET = "mysecrettoken"
