--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "jest",
     "dev": "tsx --watch src/main.ts",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
